Rework semantic mapping around contextual value flow
Semantic contracts stopped at locals and lost precision across branch joins,
selection loops, and array construction. Normalize contracts and solve producer
facts and consumer requirements before printable locals merge, using per-read
reaching definitions, boolean correlations, and allocation provenance. Keep
constant rendering separate from inference.

Preserve meanings through bounded counters and mapped table publication while
respecting storage overflow, opaque escapes, and conflicting contracts. Add
regression coverage and document the propagation rules.